infrastructure/kubernetes/production/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peer-review-ingress
  annotations:
    cert-manager.io/cluster-issuer: "peer-review-letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
      - peer-review.io
      secretName: peer-review-letsencrypt-staging
  rules:
  - host: peer-review.io 
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: peer-review-app-service 
              port:
                number: 80
