infrastructure/kubernetes/production/peer-review.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peer-review-app-deployment
  labels: 
    application: peer-review
    function: frontend-api 
    environment: production
spec:
  selector:
    matchLabels:
      application: peer-review
      function: frontend-api 
      environment: production
  replicas: 4
  template: 
    metadata:
      name: peer-review-app-pod-template
      labels:
        application: peer-review
        function: frontend-api 
        environment: production
        container: peerreview
    spec:
      terminationGracePeriodSeconds: 70
      containers:
        - name: peer-review-app-container
          image: ghcr.io/danielbingham/peerreview:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 400m
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 40"]
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 3 
            failureThreshold: 20
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 1
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: peer-review-app-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-1:843012963492:certificate/765e3fe5-68e0-4ba6-93d2-49d1d3d2c9ef
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: '8080'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  type: NodePort 
  selector:
    application: peer-review
    function: frontend-api
    environment: production
  ports:
    - name: http
      protocol: TCP
      port: 80 
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443 
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peer-review-app-ingress 
  labels:
    application: peer-review
    function: frontend-api
    environment: production
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: peer-review-production-ingress 
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:843012963492:certificate/765e3fe5-68e0-4ba6-93d2-49d1d3d2c9ef" 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=10
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true
spec:
  ingressClassName: alb
  rules:
  - host: peer-review.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: peer-review-app-service
            port: 
              number: 80
